# speak

./: .gitignore  Cargo.toml  README.md  build.rs  generate_docs.sh  mainbridge.txt  package-lock.json  rustfmt.toml
benches/: all.rs
docs/: how-does-it-works.md  learn.md  memory.md  relearn.md  special-parameters.md
examples/: README.md  all-examples.sh  f.md  learn.rs  run.rs  simple.rs  utils.rs
extra/docs/: build-docs  special-parameters.md
extra/docs/built/: special-parameters.md
extra/example/: Cargo.toml
extra/example/src/: main.rs
git-hooks/: README.md  move-hooks.sh  prepare-commit-msg
ignore/: freq.txt
src/: lib.rs  main.rs  pseudocode.rb
src/lib/: run.rs  train.rs  utils.rs
src/lib/mainfunctions/: train.rs
src/libs/: algorithm.h  algorithm.rs  chunks.rs  literal.rs  mapping.rs  run.c  run.rs  serialization.rs  train.rs  utils.rs  wrapper.h
src/libs/algorithm/: algorithm.rs  learn.rs  run.rs
src/libs/clibs/: run.c  utils.h
