[package]
name = "speak"
version = "0.1.10"
edition = "2021"
readme = "README.md"
repository = "https://github.com/SpeakML/Speak/"
keywords = ["speak", "machine-learning", "nlp", "minimal", "fast"]
license = "MPL-2.0"
description = "A minimal, fast, machine-learning based chatbot"
publish = true
documentation = "https://docs.rs/speak/latest/speak/"

[dependencies]
rand = "0.8.5"
document-features = "0.2.1"

serde = { version = "1.0.137", features = ["derive"] }

aquamarine = { version = "0.1.1", optional = true }
colored = { version = "2.0.0", optional = true }

# Now, we add the lib section just for the testing

# Dev dependencies
[dev-dependencies]
colored = "2.0.0"
# criterion = { version = "0.3", default-features = true, features = ["html_reports"]}

# Some optimizations for the release, if you want.
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[lib]
name = "speak"
bench = true
doc = true
edition = "2021"
crate-type = ["lib"]

[package.metadata.docs.rs]
# Pass all features
all-features = true

[features]
# debug is required (being that Speak is in development)
default = ["debug", "fancy_docs"]

## <h1>Fancy Docs</h1>
## Fancy docs is the feature that adds some fancy documentation to the Speak crate.
## It is not required, but it is recommended. It adds things like **graphs** or **Latex equations** to the more complex documentation.
## <h2>Dependencies used</h2>
## <ul><li><code>Aquamarine (0.1.1)</code></ul></li>
fancy_docs = ["dep:aquamarine"]

## <h1>Easy Panic</h1>
## ***The use of this feature is recommended to pair the use of the `debug` feature, but not obligatory.***
## This feature is a very optional and easy to understand feature, it will panic if the program haves an error. With this feature disabled the program will return nothing meaningful, but it will not panic, with this feature enabled the program will panic if it has an error.

## <h2>What is an error?</h2>
##
## An error is a situation that the utils library can't handle, like encouraging an out-of-bounds index.
## In the main functions ([`run`][run] and [`learn`][learn]) there isn't posible errors, so, if you're going to manually check the index you're using (Not recommended), you can disable this feature.
## <h2>Dependencies</h2>
## No dependencies used.
##
## [run]: fn.run.html
## [learn]: fn.learn.html
easy_panic = ["dep:colored"]

## <h1>Debug</h1>
## Enables simple debug messages.
## <h2>Dependencies</h2>
## <ul><li><code>colored (2.0.0)</code></li></ul>
debug = ["dep:colored"]

# ## <h1>Analyzer</h1>
# ## This feature is used to enable the `analyzer` module. (Not imported as **\***.) This module is used to analyze both the current data (Using Regex and with the option to use filters, to prevent nonsense data, spam... etc.) And the data that the user inputs.
# analyzer = ["dep:regex"]
